css/styles.css
@viewport{
    zoom: 1.0;
    zoom: extend-to-zoom;
}

@-ms-viewport{
    zoom: 1.0;
    zoom: extend-to-zoom;
}

.card-container{
    display: grid;
    grid-template-columns:  1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
    gap: 2%;
    grid-template-areas:
    ". . . . ."
    ". . . . ."
    ". . . . ."
    ". . . . ."
    ". . . . ."
    ". . . . .";
}

header{
    display: none;
}

body {
    background-color: whitesmoke;
    font-size: medium;
}

.brand {
    white-space: nowrap;
    margin: auto;
    padding: 4% 0;
    letter-spacing: .3rem;
    display: inline;
    font-size: 2rem;
    text-transform: uppercase;
    font-weight: 700;
    color: white;
}

#brand-logo{
    height: 30px;
    padding-left: 5%;
    margin-bottom: 3%;
}

.brand:hover{
    text-decoration: none;
    color: white;
}

.tab-pane{
    color: black;
    background-color: white;
    border-radius: 10px;
    text-align: center;
}

.navbar{
    background-color: #b0313f;
    width: 100%;
    margin: 0;
    padding: 0;
}

.nav-tabs{
    background-color: #343a40;
    width: 100%;
    border: none;
}

.nav-item{
    text-align: center;
}

.nav-link{
    padding: .5rem;
    width: 100%;
    font-weight: 700;
    color: white;
    display: block;
    letter-spacing: .1rem;
    font-size: large;
}

.show > .container {
    margin: 0;
    padding: 0;
}

.instructions{
    font-size: 1.5em;
    padding: 5% 1%;
    line-height: 2;
}

h2{
    font-weight: 700;
    padding-bottom: 1rem;
}

.exampleCard{
    padding-top: 1rem;
    height: 75px;
    width: 75px;
    display: inline-block;
    font-size: x-large;
    border-radius: 10%;
    text-align: center;
    margin: 1%;
    font-weight: 700;
    color: black;
    -webkit-box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    0px 0px 3px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         0px 0px 3px 0px rgba(50, 50, 50, 0.2);
}

.container-scroll{
    overflow-x: auto;
    white-space: nowrap;
    padding: 4rem 0;
}

.container-scroll > .row > .col {
    display: inline-block;
    float: none;
}

.container-scroll > .row {
    width: 300%;
}

.kana-character{
    font-size: 1.5rem;
}

.romaji{
    color: gray;
    font-size: 1rem;
}

.col{
    border-left: 1px lightgray solid;
    line-height: 1;
}

.col:nth-child(1){
    border-left: none;
}

/* Large devices (laptops/desktops, 768px and up) */
@media only screen and (min-width: 768px) {
    
    #game{
        background-color: white;
        border-radius: 10px;
        overflow: hidden;
        width: 70%;
        margin: auto;
        -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.1);
        -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.1);
        box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.1);
    }

    body{
        margin: 4% auto;
        background-color: #f5f5f5;
        background-color: #f5f5f5;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ffffff' fill-opacity='0.5' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
    }
    
    .card-container{
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr 1fr;
        gap: 20px 20px;
        grid-template-areas:
        ". . . . . . . . . ."
        ". . . . . . . . . ."
        ". . . . . . . . . .";
        padding: 0 2%;
    }

    header{
        display: block;
        overflow: hidden;
        height: 100px;
    }

    #brand-circle{
        background-color: #b0313f;
        border-top-left-radius: 100%;
        border-top-right-radius: 100%;
        border-radius: 100%;
        width: 1000px;
        height: 1000px;
        margin: auto;
    }

    .brand {
        letter-spacing: 5;
        display: block;
        white-space: normal;
        font-size: 2em;
        margin: auto;
    }

    .navbar{
        background-color: #343a40;
    }

    .nav-item{
        margin: auto;

    }

    #mobile-nav{
        display: none!important;
    }

    .nav-tabs{
        padding: .5%;
        width: 100%
    }

    .nav-link{
        display: inline;
        border-radius: 5px;
        padding: 5%;
        border: none;
    }

    .nav-link:hover{
        background-color: white;
        color:  #b0313f!important;
    }

    .nav-link.active{
        color:  black!important;
        background-color: white!important;
    }

    .romaji{
        font-size: medium;
    }

    .kana-character{
        font-size: large;
    }

    .instructions{
        line-height: 2;
        padding: 2%;
    }

    .row{
        min-height: 1.5%;
    }
    
    .kana-cell > .romaji{
        padding-bottom: 2em;
    }

    .container-scroll{
        overflow: hidden;
        padding: 3% 0;
    }
    
    .container-scroll > .row {
        width: auto;
    }

    #againBtn{
        margin: 0;
    } 
}

.redBtn{
    background-color: #b0313f;
    border-color:  #b0313f;
    color: white;
}

.btn{
    font-weight: 700;
    margin: 0 .5rem;
}

.studyBtn:hover{
    background-color: white;
    color: #b0313f;
    border-color:  #b0313f;
}

.form-check-input{
    margin-left: -1%;
}

#info{
    padding: 2%;
}

#score{
    font-weight: 400;
    font-size: large;
}

#playInfo{
    display: block;
    text-align: center;
    height: 3rem;
    padding-top: .5rem;
    margin-bottom: .5rem;
} 

#againBtn{
    margin: 5%;
}

.card {
    background: url(img/cardBackTransparent.png) no-repeat center;
    padding-top: 50%;
    line-height: 0;
    font-size: large;
    width: 100%;
    border-radius: 10%;
    text-align: center;
    font-weight: 700;
    border: none;
    border: 4px solid white; 
    color: black;
    -webkit-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.25);
    -moz-box-shadow:    0px 0px 6px 0px rgba(50, 50, 50, 0.25);
    box-shadow:         0px 0px 6px 0px rgba(50, 50, 50, 0.25);
}

.card:after {
    content: "";
    display: block;
    padding-bottom: 50%;
  }


.cardBack{
    background: url(../img/goldBack.png) no-repeat center;
    color: transparent;
    background-color: #343a40;
    background-size: 95%;
    -webkit-transition: all .7s linear;
    -ms-transition: all .7s linear;
    transition: all .7s ease-in;
    transition-delay: 1.5s;
}

.navbar{
    -webkit-box-shadow: 0 8px 6px -6px lightgray;
    -moz-box-shadow: 0 8px 6px -6px lightgray;
    box-shadow: 0 8px 6px -6px lightgray;
}

.removed{
    color: transparent;
    background: transparent;
    background-image: none;
    box-shadow: none;
    transition-delay: .5s;
}

